tidy up source